# hengkybo

./: DEPLOY_FIRST.txt  README.md  pyproject.toml  requirements.txt  streamlit_app.py
app/: streamlit_app.py
app/pages/: 01_watchlist.py  02_ticker_detail.py  03_microstructure.py  04_broker_profiles.py  05_adaptive_monitor.py  05_data_audit.py  06_adaptive_monitor.py
config/: adaptive.yaml  base.yaml  broker_taxonomy.yaml  data_sources.yaml  regime.yaml  scoring.yaml
data/features/: broker_coverage_report.csv  broker_profiles_latest.csv  burst_events_v47.csv  calibration_report.csv  feature_store_v4.csv  intraday_features_v4.csv  latest_watchlist_v4.csv  raw_data_audit.json  walk_forward_metrics.csv  walk_forward_predictions.csv
data/models/: model_summary.json  ranker.joblib
data/raw/: broker_master.csv  broker_summary_daily.csv  broker_summary_daily_real.csv  done_detail_intraday.csv  foreign_daily.csv  orderbook_intraday.csv  prices_daily.csv  prices_daily_real.csv  ticker_universe_smoke.csv
data/templates/: broker_summary_daily_template.csv  foreign_daily_template.csv  prices_daily_template.csv
db/: schema.sql
docs/: ARCHITECTURE.md  BURST_ENGINE.md  DEPLOY_FIX.md  FREE_DATA_NOTES.md  ROADMAP.md
notebooks/: 01_data_audit.ipynb
scripts/: cleanup_legacy_pages.py
src/: ingestion.py
src/adapters/: __init__.py  (+2 more)
tests/: test_adapters.py  test_adaptive_weights.py  test_broker_reclassifier.py  test_burst_engine.py  test_final_verdict.py  test_intraday_features.py  test_inventory.py  test_phase_engine.py  test_pipeline_outputs.py  test_scoring.py
(+60 files in other folders)
